Istio/Traffic-Management-Basics/kiali/kiali-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kiali-virtualservice
  namespace: istio-system
spec:
  hosts:
  - "kiali.ops.com"
  gateways:
  - kiali-gateway
  http:
  - match:
    - uri: 
      prefix: /
    route:
    - destination:
        host: kiali
        port:
          number: 20001
